[package]
name = "pathfinder-merkle-tree"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[features]
bench-skip-hashing = ["pathfinder-common/bench-skip-hashing"]

[dependencies]
anyhow = { workspace = true }
bitvec = { workspace = true }
pathfinder-common = { path = "../common" }
pathfinder-crypto = { path = "../crypto" }
pathfinder-storage = { path = "../storage" }
rand = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions_sorted = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "time", "ansi"] }

[[example]]
name = "replay_storage_updates"
required-features = ["bench-skip-hashing"]
